--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="task_name">Task name</string>
     <string name="important_task">Important task</string>
     <string name="save">Save</string>
+    <string name="tasks">Tasks</string>
 </resources>
