--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="sort_by_date_created">Sort by date created</string>
     <string name="hide_completed">Hide completed</string>
     <string name="delete_all_completed">Delete all completed</string>
+    <string name="task_deleted">Add Task</string>
+    <string name="undo">Undo</string>
 </resources>
