Add ability to add/edit task

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">MVVMTodo</string>
     <string name="add_task">Add Task</string>
+    <string name="edit_task">Edit Task</string>
     <string name="task_name">Task name</string>
     <string name="important_task">Important task</string>
     <string name="save">Save</string>
@@ -13,4 +14,5 @@
     <string name="delete_all_completed">Delete all completed</string>
     <string name="task_deleted">Add Task</string>
     <string name="undo">Undo</string>
+    <string name="created_template">Created: %1$s</string>
 </resources>
